# treeawesome

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: CI.yml
cmake/: linter.cmake
src/: CMakeLists.txt  SQUEERR.cpp  SQUEERR.h
tests/: CMakeLists.txt  negative.cpp  positive.cpp
